# admin

./: .env.example  .gitignore  CLAUDE_DESKTOP_SETUP.md  GETTING-STARTED.md  QUICKSTART.md  README.md  claude_desktop_config.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
claudedocs/: Browser-Authentication-Setup.md  Implementation-Summary.md  M365-Admin-MCP-Specification.md  Phase-1.5-Complete.md  Phase-2-Complete.md  Phase-3-Complete.md  Phase-3.5-Browser-Authentication.md  Production-Deployment-Guide.md
data/tasks/: index.json
scripts/: create_sample_templates.py  init_database.py  setup_azure_ad.sh  validate_structure.sh  validate_tools.py
src/m365_admin_mcp/: __init__.py  config.py  server.py
src/m365_admin_mcp/auth/: __init__.py  graph_auth.py
src/m365_admin_mcp/resources/: __init__.py  health_resource.py
src/m365_admin_mcp/tools/: __init__.py  email_templates.py  teams_provisioning.py  user_management.py
src/m365_admin_mcp/utils/: __init__.py  sanitization.py  validation.py
tests/: __init__.py
tests/unit/: test_auth.py  test_validation.py
